refactor: 카드덱을 stack말고 deque로 변경